<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.RestaurantDetailFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/restaurantImageView"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:src="@drawable/glass"
            android:scaleType="centerCrop" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingTop="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/restaurantNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_name"
                android:layout_alignParentStart="true"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ratingTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:layout_alignTop="@+id/restaurantNameTextView"
                android:layout_alignParentEnd="true"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cuisineTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cuisine"
                android:layout_below="@+id/restaurantNameTextView"
                android:layout_alignParentStart="true"
                android:textColor="@color/colorSecondaryText"
                android:textStyle="italic" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_above="@+id/saveRestaurantButton"
                android:paddingLeft="30dp"
                android:paddingTop="20dp"
                android:paddingRight="30dp">

                <TextView
                    android:id="@+id/websiteTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/website"
                    android:drawablePadding="4dp"
                    android:textColor="@color/colorTextIcons"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    app:drawableLeftCompat="@drawable/ic_baseline_exit_to_app_24" />

                <TextView
                    android:id="@+id/phoneTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:drawablePadding="4dp"
                    android:textColor="@color/colorTextIcons"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    app:drawableLeftCompat="@drawable/ic_baseline_call_24" />

                <TextView
                    android:id="@+id/addressTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:drawablePadding="4dp"
                    android:textColor="@color/colorTextIcons"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_vertical"
                    app:drawableLeftCompat="@drawable/ic_baseline_map_24" />

            </LinearLayout>

            <Button
                android:id="@+id/saveRestaurantButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/colorAccent"
                android:text="@string/save_restaurant"
                android:textColor="@color/colorTextIcons"
                android:textSize="15sp" />
        </RelativeLayout>

    </LinearLayout>

</FrameLayout>