<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryText">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/main"
        android:scaleType="centerCrop"
        android:src="@drawable/restaurants" />

    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:fontFamily="@font/nunito_sans_semibold" />


    <Button
        android:id="@+id/findRestaurantsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/savedRestaurantsButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="114dp"
        android:layout_marginLeft="114dp"
        android:layout_marginEnd="114dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/bt_bg"
        android:text="@string/button_name"
        android:textColor="@color/colorTextIcons"
        android:visibility="visible" />

    <Button
        android:id="@+id/savedRestaurantsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="89dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/bt_bg"
        android:text="My Saved Restaurants"
        android:textColor="@color/colorTextIcons"
        android:visibility="visible" />

</RelativeLayout>